text_classification added

--- a/python/iterator_generator.ipynb
+++ b/python/iterator_generator.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "711a5756-1fee-450f-bccb-ff19c9bbccc0",
    "metadata": {},
    "outputs": [
@@ -58,6 +58,8 @@
       "dummy\n",
       "dummy\n",
       "\n",
+      "<class 'list_iterator'>\n",
+      "<class 'generator'>\n",
       "9032\n",
       "128\n"
      ]
@@ -66,12 +68,12 @@
    "source": [
     "import sys \n",
     "\n",
-    "def csv_iter(f_name = \"./test.csv\"):\n",
+    "def csv_iter(f_name = \"./python/test.csv\"):\n",
     "    f = open(f_name,\"r\")\n",
     "    str_list = f.read().split(\"\\n\")\n",
     "    return str_list\n",
     "\n",
-    "def csv_gen(f_name=\"./test.csv\"):\n",
+    "def csv_gen(f_name=\"./python/test.csv\"):\n",
     "    f = open(f_name,\"r\")\n",
     "    for row in f:\n",
     "        yield row\n",
@@ -82,10 +84,12 @@
     "# 아래 처럼 iterator 가능\n",
     "print(next(csv_iter().__iter__())) \n",
     "print(next(csv_gen()))\n",
+    "print(type(csv_iter().__iter__()))\n",
+    "print(type(csv_gen()))\n",
     "\n",
     "# 위의 함수를 아래 처럼도 간단히 생성 가능\n",
-    "csv_iter = [row for row in open(\"./test.csv\")] # iterator\n",
-    "csv_gen = (row for row in open(\"./test.csv\")) #generator\n",
+    "csv_iter = [row for row in open(\"./python/test.csv\")] # iterator\n",
+    "csv_gen = (row for row in open(\"./python/test.csv\")) #generator\n",
     "\n",
     "print(sys.getsizeof(csv_iter))\n",
     "print(sys.getsizeof(csv_gen))"
@@ -93,8 +97,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e368a3ff-0de6-4962-9b66-48fc38f3fc1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'a')\n",
+      "(1, 'b')\n",
+      "(2, 'c')\n",
+      "(3, 'd')\n",
+      "0 a\n",
+      "1 b\n",
+      "2 c\n",
+      "3 d\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    iterable 객체의 Tuple 형태 반환을 위한 Iteration으로 enumerate()를 사용\n",
+    "\"\"\"\n",
+    "a = [\"a\",\"b\",\"c\",\"d\"]\n",
+    "for i in enumerate(a):\n",
+    "    print(i)\n",
+    "for i, v in enumerate(a):\n",
+    "    print(i,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc68a650-00a9-450e-bb48-d385a93ba74e",
    "metadata": {},
    "outputs": [],
    "source": []
