--- a/torch/text_classification.ipynb
+++ b/torch/text_classification.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "50c05d51-6118-4c4d-8747-ce5ae8c7dae8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'torchtext.data.datasets_utils._RawTextIterableDataset'>\n",
-      "vocab size = 95811\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n    https://pytorch.org/tutorials/beginner/text_sentiment_ngrams_tutorial.html\\n        - AG_NEWS 데이터셋으로 Text를 분류하는 모델 학습\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "318719c9-f5de-4eda-b12a-be619967ac10",
    "metadata": {},
    "outputs": [
@@ -34,6 +36,7 @@
      "text": [
       "<class 'torchtext.data.datasets_utils._RawTextIterableDataset'>\n",
       "vocab size = 95811\n",
+      "num class = 4\n",
       "[475, 21]\n"
      ]
     }
@@ -69,15 +72,17 @@
     "vocab = build_vocab_from_iterator(yield_tokens(train_iter),specials=[\"<unk>\"]) \n",
     "vocab.set_default_index(vocab[\"<unk>\"])\n",
     "\n",
-    "vocab_list = vocab.get_itos()\n",
-    "print(\"vocab size = %d\"%len(vocab_list))\n",
+    "train_iter = AG_NEWS(root=\"./data/\",split='train') \n",
+    "num_class = len(set([label for label,text in train_iter]))\n",
+    "print(\"vocab size = %d\"%len(vocab))\n",
+    "print(\"num class = %d\"%num_class)\n",
     "\n",
     "print(vocab([\"here\",\"is\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "9fdf5717-0d15-47f5-ac84-172506fb72f6",
    "metadata": {},
    "outputs": [
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "b6fe8982-4bca-47dd-8489-7f35e75cefe7",
    "metadata": {},
    "outputs": [
@@ -188,7 +193,7 @@
       "          797,   320, 15874,    98,     3, 27657,    28,     5,  4459,    11,\n",
       "          564, 52790,     8, 80617,  2125,     7,     2,   525,   241,     3,\n",
       "           28,  3890, 82814,  6574,    10,   206,   359,     6,     2,   126,\n",
-      "            1]), tensor([ 0, 29, 71]))\n"
+      "            1]), tensor([ 0, 29]))\n"
      ]
     }
    ],
@@ -206,6 +211,7 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "import time\n",
     "\n",
+    "\n",
     "class TextDataset(Dataset):\n",
     "    \"\"\"\n",
     "        custom dataset을 위해서 다음 3가지의 method를 구현해야함\n",
@@ -217,6 +223,7 @@
     "        train_iter = AG_NEWS(root=root,split=split) \n",
     "        self.train_data = [x for x in train_iter]\n",
     "        self.transform = transform\n",
+    "\n",
     "        \n",
     "    def __len__(self):\n",
     "        return len(self.train_data)\n",
@@ -250,7 +257,7 @@
     "    \n",
     "    label_list=torch.tensor(label_list)\n",
     "    text_list=torch.cat(text_list,0)\n",
-    "    offsets=torch.tensor(offsets).cumsum(dim=0)\n",
+    "    offsets=torch.tensor(offsets[:-1]).cumsum(dim=0)\n",
     "    \n",
     "    return label_list, text_list, offsets\n",
     "    \n",
@@ -274,18 +281,316 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "899b23a5-89af-4f73-9a9b-ee1343ea68f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0072, -0.2905, -0.1237,  0.1631],\n",
+       "        [ 0.0127, -0.1741, -0.0472,  0.1953]], grad_fn=<AddmmBackward>)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "\"\"\"\n",
+    "    Text를 구성하는 token들의 mean에 Linear layer 하나 추가하여 분류하는 모델 생성\n",
+    "\"\"\"\n",
+    "from torch import nn\n",
+    "\n",
+    "class TextClassificationModel(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, vocab_size, emb_size, num_class):\n",
+    "        super(TextClassificationModel,self).__init__()\n",
+    "        # Embedding Layer -> Token들 id list를 받아 Embedding 값의 mean을 만듬\n",
+    "        self.embedding=nn.EmbeddingBag(vocab_size,emb_size,sparse=True) \n",
+    "        self.fc = nn.Linear(emb_size,num_class)\n",
+    "\n",
+    "    # 추후 정의 모델의 inference 시 사용되는 method\n",
+    "    def forward(self,text,offsets):\n",
+    "        embed=self.embedding(text,offsets)\n",
+    "#         print(embed)\n",
+    "        return self.fc(embed)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "vocab_size = len(vocab)\n",
+    "emb_size = 64\n",
+    "model = TextClassificationModel(vocab_size, emb_size, num_class)\n",
+    "\n",
+    "# 데데이이터  추추론 예시\n",
+    "dataloader=DataLoader(text_dataset, batch_size=2, shuffle=False, collate_fn=collate_batch)\n",
+    "label, text, offset = next(iter(dataloader))\n",
+    "\n",
+    "\n",
+    "model.eval()\n",
+    "model(text,offset)\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "13b27a9e-f689-4a5e-aff6-5e4486aa64c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================================\n",
+      "EPOCH  1\n",
+      "batchs 100/422 loss 118.94082 accuracy 0.4812 |\n",
+      "batchs 200/422 loss 93.76521 accuracy 0.6232 |\n",
+      "batchs 300/422 loss 79.33162 accuracy 0.6881 |\n",
+      "batchs 400/422 loss 70.54334 accuracy 0.7308 |\n",
+      "validation accuracy 0.7561 |\n",
+      "learning rate decay\n",
+      "====================================\n",
+      "EPOCH  2\n",
+      "batchs 100/422 loss 65.52635 accuracy 0.7566 |\n",
+      "batchs 200/422 loss 64.28022 accuracy 0.7586 |\n",
+      "batchs 300/422 loss 62.82645 accuracy 0.7632 |\n",
+      "batchs 400/422 loss 62.19183 accuracy 0.7701 |\n",
+      "validation accuracy 0.7655 |\n",
+      "learning rate decay\n",
+      "====================================\n",
+      "EPOCH  3\n",
+      "batchs 100/422 loss 63.35445 accuracy 0.7657 |\n",
+      "batchs 200/422 loss 62.63051 accuracy 0.7668 |\n",
+      "batchs 300/422 loss 61.69266 accuracy 0.7687 |\n",
+      "batchs 400/422 loss 61.48773 accuracy 0.7723 |\n",
+      "validation accuracy 0.7662 |\n",
+      "learning rate decay\n",
+      "====================================\n",
+      "EPOCH  4\n",
+      "batchs 100/422 loss 63.12752 accuracy 0.7665 |\n",
+      "batchs 200/422 loss 62.46681 accuracy 0.7672 |\n",
+      "batchs 300/422 loss 61.58450 accuracy 0.7690 |\n",
+      "batchs 400/422 loss 61.41804 accuracy 0.7730 |\n",
+      "validation accuracy 0.7662 |\n",
+      "====================================\n",
+      "EPOCH  5\n",
+      "batchs 100/422 loss 63.10483 accuracy 0.7665 |\n",
+      "batchs 200/422 loss 62.44438 accuracy 0.7672 |\n",
+      "batchs 300/422 loss 61.56290 accuracy 0.7690 |\n",
+      "batchs 400/422 loss 61.39773 accuracy 0.7730 |\n",
+      "validation accuracy 0.7664 |\n",
+      "learning rate decay\n",
+      "====================================\n",
+      "EPOCH  6\n",
+      "batchs 100/422 loss 63.08536 accuracy 0.7664 |\n",
+      "batchs 200/422 loss 62.42822 accuracy 0.7673 |\n",
+      "batchs 300/422 loss 61.55223 accuracy 0.7691 |\n",
+      "batchs 400/422 loss 61.39122 accuracy 0.7730 |\n",
+      "validation accuracy 0.7664 |\n",
+      "====================================\n",
+      "EPOCH  7\n",
+      "batchs 100/422 loss 63.08385 accuracy 0.7663 |\n",
+      "batchs 200/422 loss 62.42657 accuracy 0.7673 |\n",
+      "batchs 300/422 loss 61.55076 accuracy 0.7691 |\n",
+      "batchs 400/422 loss 61.38972 accuracy 0.7730 |\n",
+      "validation accuracy 0.7664 |\n",
+      "====================================\n",
+      "EPOCH  8\n",
+      "batchs 100/422 loss 63.08234 accuracy 0.7664 |\n",
+      "batchs 200/422 loss 62.42492 accuracy 0.7672 |\n",
+      "batchs 300/422 loss 61.54930 accuracy 0.7691 |\n",
+      "batchs 400/422 loss 61.38822 accuracy 0.7730 |\n",
+      "validation accuracy 0.7664 |\n",
+      "====================================\n",
+      "EPOCH  9\n",
+      "batchs 100/422 loss 63.08083 accuracy 0.7664 |\n",
+      "batchs 200/422 loss 62.42329 accuracy 0.7672 |\n",
+      "batchs 300/422 loss 61.54785 accuracy 0.7691 |\n",
+      "batchs 400/422 loss 61.38673 accuracy 0.7730 |\n",
+      "validation accuracy 0.7664 |\n",
+      "====================================\n",
+      "EPOCH  10\n",
+      "batchs 100/422 loss 63.07932 accuracy 0.7664 |\n",
+      "batchs 200/422 loss 62.42165 accuracy 0.7673 |\n",
+      "batchs 300/422 loss 61.54639 accuracy 0.7691 |\n",
+      "batchs 400/422 loss 61.38524 accuracy 0.7730 |\n",
+      "validation accuracy 0.7664 |\n",
+      "test accuracy 0.7664 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "    <전체 정리>\n",
+    "    \n",
+    "    최종 모델 학습 및 평가 코드\n",
+    "    - Train, Valid, Test 데이터 분리리하여 학습 및 평가\n",
+    "    - Loss, optimization, scheduler 정의하여 모델 학습\n",
+    "    \n",
+    "\"\"\"\n",
+    "\n",
+    "# gpu 있을 경우 사용\n",
+    "device=torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\") \n",
+    "\n",
+    "# hyper parameter \n",
+    "EPOCHS = 10\n",
+    "LR = 5\n",
+    "BATCH_SIZE = 256\n",
+    "\n",
+    "\n",
+    "# 위에서 정의한 TextDataset을 활용하여 Custom dataset 불러옴\n",
+    "train_dataset=TextDataset(root=\"./data/\",split=\"train\",transform=transform) \n",
+    "test_dataset=TextDataset(root=\"./data/\",split=\"test\",transform=transform) \n",
+    "len_train = int(len(train_dataset)*0.9)\n",
+    "len_valid = len(train_dataset)-len_train\n",
+    "\n",
+    "# 9:1 비율로 Train, Valid dataset 나눔\n",
+    "train_dataset, valid_dataset=torch.utils.data.random_split(train_dataset,[len_train,len_valid]) \n",
+    "\n",
+    "# 위에서 정의한 batch 만드는 custom collate_fn 사용 / train, valid, test를 batch형태로 iteration 하기 위한 dataloader 생성\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, collate_fn=collate_batch)\n",
+    "valid_dataloader = DataLoader(valid_dataset, batch_size=BATCH_SIZE, collate_fn=collate_batch)\n",
+    "test_dataloader = DataLoader(valid_dataset, batch_size=BATCH_SIZE, collate_fn=collate_batch)\n",
+    "\n",
+    "# 모델 생성\n",
+    "vocab_size = len(vocab)\n",
+    "emb_size = 64\n",
+    "model = TextClassificationModel(vocab_size, emb_size, num_class).to(device)\n",
+    "\n",
+    "\n",
+    "# loss function, optimizer, scheduler 설정\n",
+    "criterion = torch.nn.CrossEntropyLoss() # multi class classification을 위한 Cross entopy loss\n",
+    "optimizer = torch.optim.SGD(model.parameters(),lr=LR) # SGD Optimizer\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size = 1.0, gamma=0.1) # step size의 epoch마다 gamma를 learning rate에 곱하여 줄이는 scheduler\n",
+    "\n",
+    "def print_log(true_num, total_num):\n",
+    "    print(\"accuracy %.4f |\"%(true_num/total_num))\n",
+    "\n",
+    "def data_to_device(*data):\n",
+    "    return tuple(k.to(device) for k in data)\n",
+    "\n",
+    "    \n",
+    "def train(data_loader):\n",
+    "    \"\"\" 모델 학습 \"\"\"\n",
+    "    total_num, true_num, loss_val = 0,0,0\n",
+    "    \n",
+    "    model.train() # 학습 모드 / gradient 계산 + drop out, batch normalization 등 활성화\n",
+    "    for idx, (label, text, offsets) in enumerate(data_loader):\n",
+    "        \n",
+    "        label, text, offsets = data_to_device(label, text, offsets) # gpu로 데이터 옮김 (사실 이는 data loader의 collate_fn에서 구현해도됨)\n",
+    "        \n",
+    "        optimizer.zero_grad() # gradient를 초기화 (초기화 하지 않으면 계산한 gradient가 계속 쌓임)\n",
+    "        pred = model(text,offsets) # batch input에 대해 text classification 추론\n",
+    "        loss = criterion(pred,label) # loss 값을 구함\n",
+    "\n",
+    "        loss.backward() # back propagation으로 gradient 구함 -> model의 prameter각각의 grad 변수에 이 값이 저장됨\n",
+    "\n",
+    "        optimizer.step() # 계산한 gradient를 사용하여 parameter update\n",
+    "        \n",
+    "        # 예측이 맞은 수와 전체 batch의 데이터 수 구함\n",
+    "        true_num += (pred.argmax(1) == label).sum().item() \n",
+    "        total_num += label.size(0)\n",
+    "        loss_val+=loss.item()\n",
+    "\n",
+    "        \n",
+    "        # 10000 batch 마다 정확도 log 남김\n",
+    "        if idx!=0 and idx%100==0:\n",
+    "            print(\"batchs %d/%d \"%(idx,len(data_loader)),end=\"\")\n",
+    "            \n",
+    "            print(\"loss %.5f \"%loss_val,end=\"\")\n",
+    "            print_log(true_num, total_num)\n",
+    "            total_num, true_num,loss_val = 0,0,0\n",
+    "\n",
+    "def eval(data_loader):\n",
+    "    \n",
+    "    total_num, true_num = 0,0\n",
+    "    model.eval() # 평가 모드 / gradient 계산 + drop out, batch normalization 등 비활성화\n",
+    "    for idx, (label, text, offsets) in enumerate(data_loader):\n",
+    "        \n",
+    "        label, text, offsets = data_to_device(label, text, offsets)\n",
+    "        pred = model(text,offsets)\n",
+    "        \n",
+    "        true_num += (pred.argmax(1) == label).sum().item()\n",
+    "        total_num += label.size(0)\n",
+    "        \n",
+    "    return true_num, total_num\n",
+    "\n",
+    "valid_acc = 0\n",
+    "\n",
+    "for epochs in range(1, EPOCHS+1):\n",
+    "    print(\"====================================\")\n",
+    "    print(\"EPOCH \",epochs)\n",
+    "    \n",
+    "    train(train_dataloader)\n",
+    "    \n",
+    "    # 1 epoch 학습 끝날 때마다 validation dataset에 대해 평가 후 accuracy 출력\n",
+    "    print(\"validation \",end=\"\")\n",
+    "    true_num, total_num=eval(valid_dataloader)\n",
+    "    \n",
+    "    print_log(true_num, total_num)\n",
+    "    \n",
+    "    # validation dataset 기준으로 정확도가 높아지면 learning rate를 줄임\n",
+    "    if valid_acc<true_num/total_num:\n",
+    "        valid_acc=true_num/total_num\n",
+    "        scheduler.step()\n",
+    "        print(\"learning rate decay\")\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "# Test Dataset으로 최종 평가\n",
+    "print(\"test \",end=\"\")\n",
+    "print_log(*eval(test_dataloader))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bd5bc705-96c4-4184-a174-fbfae41fcd0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1, 2)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def a(*a):\n",
+    "    for k in a:\n",
+    "        print(k)\n",
+    "    \n",
+    "tuple(k for k in range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5fbe7906-b247-4693-bfc2-91d0d0a39e29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139920566125264\n",
+      "139920566125264\n",
+      "139920566125264\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b2355557-3b9d-4d50-8d7d-b7e9cac10d8d",
+   "id": "62b47ba7-3e7a-4f9e-b275-a4e0992416d3",
    "metadata": {},
    "outputs": [],
    "source": []
